--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -15,8 +15,8 @@
 #
 
 import init.hammerhead.usb.rc
-import init.hammerhead_svelte.rc
-import init.hammerhead.diag.rc
+#import init.hammerhead_svelte.rc
+#import init.hammerhead.diag.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
@@ -448,6 +448,7 @@ service qseecomd /system/bin/qseecomd
 # virtual sdcard daemon running as media_rw (1023)
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
     class late_start
+    disabled
 
 service fuse_usbdisk /system/bin/sdcard -u 1023 -g 1023 -w 1023 /mnt/media_rw/usbdisk /storage/usbdisk
     class late_start
