initialize wlan from init.hammerhead.rc instead init_wlan.sh

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -151,6 +151,7 @@ on post-fs-data
 
     # wifi
     chown wifi system /persist/wifi
+    insmod /system/lib/modules/bcmdhd.ko
 
     #  bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
@@ -493,10 +494,10 @@ service vss_init /vendor/bin/vss_init
     group root
     disabled
 
-service init_wlan /system/bin/sh /system/etc/init_wlan.sh
-    class main
-    user root
-    oneshot
+# service init_wlan /system/bin/sh /system/etc/init_wlan.sh
+#    class main
+#    user root
+#    oneshot
 
 service time_daemon /system/bin/time_daemon
     class late_start
