insmod wlan module early to avoid race condition with network-manager
Change-Id: Idddc483e19a379568fb00e56c0f5c1b4081b28de
Signed-off-by: Marius Gripsgard <mariogrip@ubuntu.com>

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -151,6 +151,7 @@ on post-fs-data
 
     # wifi
     chown wifi system /persist/wifi
+    insmod /system/lib/modules/bcmdhd.ko
 
     #  bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
@@ -492,11 +493,6 @@ service vss_init /vendor/bin/vss_init
     user root
     group root
     disabled
-
-service init_wlan /system/bin/sh /system/etc/init_wlan.sh
-    class main
-    user root
-    oneshot
 
 service time_daemon /system/bin/time_daemon
     class late_start
