--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -465,6 +465,11 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
     user camera
     group camera system inet input
+    
+service timekeep /system/bin/timekeep
+    class late_start
+    user root
+    group root
 
 service bdAddrLoader /system/bin/bdAddrLoader -f /persist/bluetooth/.bdaddr -h -x
     class main
