--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -111,11 +111,13 @@ on boot
     write /sys/bus/msm_subsys/devices/subsys2/restart_level "related"
 
     # leds
-    chown system system /sys/class/leds/red/on_off_ms
-    chown system system /sys/class/leds/green/on_off_ms
-    chown system system /sys/class/leds/blue/on_off_ms
-    chown system system /sys/class/leds/red/rgb_start
-    chmod 664 /sys/class/leds/lcd-backlight/brightness
+    chmod 0666 /sys/class/leds/red/on_off_ms
+    chmod 0666 /sys/class/leds/green/on_off_ms
+    chmod 0666 /sys/class/leds/blue/on_off_ms
+    chmod 0666 /sys/class/leds/red/rgb_start
+    chmod 0666 /sys/class/leds/led\:flash_torch/brightness
+    chmod 0666 /sys/class/leds/lcd-backlight/brightness
+
 
 on post-fs-data
     write /sys/kernel/boot_adsp/boot 1
