--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -115,7 +115,15 @@ on boot
     chown system system /sys/class/leds/green/on_off_ms
     chown system system /sys/class/leds/blue/on_off_ms
     chown system system /sys/class/leds/red/rgb_start
-    chmod 664 /sys/class/leds/lcd-backlight/brightness
+    chmod 0666 /sys/class/leds/red/on_off_ms
+    chmod 0666 /sys/class/leds/green/on_off_ms
+    chmod 0666 /sys/class/leds/blue/on_off_ms
+    chmod 0666 /sys/class/leds/red/rgb_start
+    chmod 0666 /sys/class/leds/led\:flash_torch/brightness
+    chmod 0666 /sys/class/leds/lcd-backlight/brightness
+    chmod 0666 /sys/class/leds/red/brightness
+    chmod 0666 /sys/class/leds/green/brightness
+    chmod 0666 /sys/class/leds/blue/brightness
 
 on post-fs-data
     write /sys/kernel/boot_adsp/boot 1
