Trying to get Bluetooth working...
Change-Id: I4e38326cb5d87ddfcd1030af174379c742374a70

--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -397,3 +397,9 @@ service init_wlan_bt /system/bin/sh /system/etc/init_wlan_bt.sh
     group root
     oneshot
 
+service minimedia /system/bin/minimediaservice
+    class main
+    user media
+    group audio camera
+    ioprio rt 4
+
