--- a/ubuntu/bluetooth/bluetooth-touch-android.conf
+++ b/ubuntu/bluetooth/bluetooth-touch-android.conf
@@ -15,7 +15,7 @@ script
         chgrp dialout /sys/class/rfkill/rfkill0/type
         rfkill unblock bluetooth
 
-        /usr/bin/hciattach -f /system/vendor/firmware ttyHS99 bcm43xx 4000000 flow sleep
+        /system/bin/hciattach -f /system/vendor/firmware ttyHS99 bcm43xx 4000000 flow sleep /data/property/persist.service.bdroid.bdaddr &
 end script
 
 
