This fixes the unloadable wifi module problem
Change-Id: Ie8285ab1af48f5b9af3ee00793ae594cf520a114

--- a/ubuntu/bluetooth/bluetooth-touch-android.conf
+++ b/ubuntu/bluetooth/bluetooth-touch-android.conf
@@ -4,18 +4,21 @@
 #
 # This uses the script for Hammerhead
 
-description     "Hammerhead bluetooth initialization"
+description     "Hammerhead wifi and bluetooth initialization"
 
 stop on stopping bluetooth
 
 script
-        chmod 0660 /sys/class/rfkill/rfkill0/state
-        chmod 0660 /sys/class/rfkill/rfkill0/type
-        chgrp dialout /sys/class/rfkill/rfkill0/state
-        chgrp dialout /sys/class/rfkill/rfkill0/type
-        rfkill unblock bluetooth
 
+        for i in 1 2 3 4 5; do
+            sleep 3
+            if [ -e /sys/class/rfkill/rfkill0/state ]; then
+                break
+            fi
+        done
+        /sbin/insmod /system/lib/modules/bcmdhd.ko
         /system/bin/hciattach -f /system/vendor/firmware ttyHS99 bcm43xx 4000000 flow sleep /data/property/persist.service.bdroid.bdaddr &
+
 end script
 
 
