Add usb support for mtp not finished yet get some device hacks to symlink

--- a/ubuntu/device-hacks.conf
+++ b/ubuntu/device-hacks.conf
@@ -28,7 +28,7 @@ script
     then
         echo "mixer_paths.xml link already present."
     else
-        ln -s /system/etc/mixer_paths_tasha.xml /etc/mixer_paths_tasha.xml
+        ln -s /system/etc/mixer_paths.xml /etc/mixer_paths.xml
         echo "mixer_paths.xml link created."
     fi
 
@@ -38,6 +38,14 @@ script
     else
         ln -s /system/etc/firmware/ /etc/firmware
         echo "/etc/firmware link created."
+    fi
+    
+    if [ -e /etc/wifi ];
+    then
+        echo "/etc/wifi link already present."
+    else
+        ln -s /system/etc/wifi/ /etc/wifi
+        echo "/etc/wifi link created."
     fi
 
     if [ "$ROOT_WAS_MOUNTED_RO" = "1" ]; then
