--- a/ubuntu/usb/mtp-state.conf
+++ b/ubuntu/usb/mtp-state.conf
@@ -2,24 +2,19 @@ start on (android-container persist.sys.usb.config=* or android) and started lig
 
 task
 
-emits android-mtp-on
-emits android-mtp-off
-
 script
  VAL=$(getprop persist.sys.usb.config)
  case ${VAL} in
    mtp)
-     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
      /bin/bash /system/halium/usr/share/usbinit/setupusb mtp
-     /sbin/initctl emit android-mtp-on
+     echo "mtp"
      ;;
    mtp,adb)
-     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
      /bin/bash /system/halium/usr/share/usbinit/setupusb mtp_adb
-     /sbin/initctl emit android-mtp-on
+     echo "mtp,adb"
      ;;
    *)
-     /sbin/initctl emit android-mtp-off
+     echo "off"
     ;;
  esac
 end script
