Clea device tree Fix Light sensor on udev rules add mtp usb not fully working

--- a/ubuntu/device-hacks.conf
+++ b/ubuntu/device-hacks.conf
@@ -32,6 +32,30 @@ script
         echo "mixer_paths.xml link created."
     fi
 
+    if [ -e /etc/media_codecs.xml ];
+    then
+        echo "media_codecs.xml link already present."
+    else
+        ln -s /system/etc/media_codecs.xml /etc/media_codecs.xml
+        echo "media_codecs.xml link created."
+    fi
+
+    if [ -e /etc/media_codecs_performance.xml ];
+    then
+        echo "media_codecs_performance.xml link already present."
+    else
+        ln -s /system/etc/media_codecs_performance.xml /etc/media_codecs_performance.xml
+        echo "media_codecs_performance.xml link created."
+    fi
+
+    if [ -e /etc/media_profiles.xml ];
+    then
+        echo "media_profiles.xml link already present."
+    else
+        ln -s /system/etc/media_profiles.xml /etc/media_profiles.xml
+        echo "media_profiles.xml link created."
+    fi
+
     if [ -e /etc/firmware ];
     then
         echo "/etc/firmware link already present."
