--- a/ubuntu/usb/mtp-state.conf
+++ b/ubuntu/usb/mtp-state.conf
@@ -6,15 +6,17 @@ script
  VAL=$(getprop persist.sys.usb.config)
  case ${VAL} in
    mtp)
+     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
      /bin/bash /system/halium/usr/share/usbinit/setupusb mtp
      echo "mtp"
      ;;
    mtp,adb)
+     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
      /bin/bash /system/halium/usr/share/usbinit/setupusb mtp_adb
-     echo "mtp,adb"
+     /sbin/initctl emit android-mtp-on
      ;;
    *)
-     echo "off"
+     /sbin/initctl emit android-mtp-off
     ;;
  esac
 end script
