--- a/ubuntu/device-hacks.conf
+++ b/ubuntu/device-hacks.conf
@@ -1,4 +1,4 @@
-description "Device hacks - create symlinks"
+description "Device hacks - create /etc/acdbdata symlink"
 author "Ratchanan Srirattanamet <ratchanan@ubports.com>"
 
 # This device has a problem with the Audio HAL's component that cause it to
@@ -10,70 +10,27 @@ start on filesystem
 
 task
 script
+    if [ -e /etc/acdbdata ]; then
+        echo "/etc/acdbdata link already exists."
+        exit 0
+    fi
+        if [ -e /etc/mixer_paths.xml ]; then
+        echo "/etc/mixer_paths.xml link already exists."
+        exit 0
+    fi
+
     if grep -q -e ' / [a-z0-9]* ro[, ]' /proc/mounts; then
     #                 ^^ FS ^^  ^opts^
         ROOT_WAS_MOUNTED_RO=1
         mount -o remount,rw /
     fi
 
-    if [ -e /etc/acdbdata ];
-    then
-        echo "/etc/acdbdata link already present."
-    else
-        ln -s /system/etc/acdbdata /etc/acdbdata
-        echo "/etc/acdbdata link created."
-    fi
-
-    if [ -e /etc/mixer_paths.xml ];
-    then
-        echo "mixer_paths.xml link already present."
-    else
-        ln -s /system/etc/mixer_paths.xml /etc/mixer_paths.xml
-        echo "mixer_paths.xml link created."
-    fi
-
-    if [ -e /etc/media_codecs.xml ];
-    then
-        echo "media_codecs.xml link already present."
-    else
-        ln -s /system/etc/media_codecs.xml /etc/media_codecs.xml
-        echo "media_codecs.xml link created."
-    fi
-
-    if [ -e /etc/media_codecs_performance.xml ];
-    then
-        echo "media_codecs_performance.xml link already present."
-    else
-        ln -s /system/etc/media_codecs_performance.xml /etc/media_codecs_performance.xml
-        echo "media_codecs_performance.xml link created."
-    fi
-
-    if [ -e /etc/media_profiles.xml ];
-    then
-        echo "media_profiles.xml link already present."
-    else
-        ln -s /system/etc/media_profiles.xml /etc/media_profiles.xml
-        echo "media_profiles.xml link created."
-    fi
-
-    if [ -e /etc/firmware ];
-    then
-        echo "/etc/firmware link already present."
-    else
-        ln -s /system/etc/firmware/ /etc/firmware
-        echo "/etc/firmware link created."
-    fi
-    
-    if [ -e /etc/wifi ];
-    then
-        echo "/etc/wifi link already present."
-    else
-        ln -s /system/etc/wifi/ /etc/wifi
-        echo "/etc/wifi link created."
-    fi
+    ln -s /system/etc/acdbdata /etc/acdbdata
+    ln -s /system/etc/mixer_paths.xml /etc/mixer_paths.xml
 
     if [ "$ROOT_WAS_MOUNTED_RO" = "1" ]; then
         mount -o remount,ro /
     fi
-    exit 0
+
+    echo "/etc/acdbdata created successfully."
 end script
