--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -114,7 +114,15 @@ on boot
     chown system system /sys/class/leds/green/on_off_ms
     chown system system /sys/class/leds/blue/on_off_ms
     chown system system /sys/class/leds/red/rgb_start
-    chmod 664 /sys/class/leds/lcd-backlight/brightness
+    chmod 0666 /sys/class/leds/red/on_off_ms
+    chmod 0666 /sys/class/leds/green/on_off_ms
+    chmod 0666 /sys/class/leds/blue/on_off_ms
+    chmod 0666 /sys/class/leds/red/rgb_start
+    chmod 0666 /sys/class/leds/led\:flash_torch/brightness
+    chmod 0666 /sys/class/leds/lcd-backlight/brightness
+    chmod 0666 /sys/class/leds/red/brightness
+    chmod 0666 /sys/class/leds/green/brightness
+    chmod 0666 /sys/class/leds/blue/brightness
 
 on post-fs-data
     write /sys/kernel/boot_adsp/boot 1
@@ -165,6 +173,9 @@ on post-fs-data
 
     # Set the CPU Freq Sampling rates
     write /sys/module/msm_thermal/core_control/enabled 0
+    chmod 664 /sys/devices/system/cpu/cpu1/online
+    chmod 664 /sys/devices/system/cpu/cpu2/online
+    chmod 664 /sys/devices/system/cpu/cpu3/online
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
@@ -278,7 +289,7 @@ service bridgemgrd /system/bin/bridgemgrd
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /system/bin/qmuxd
     class main
-    user radio
+    user root
     group radio audio bluetooth wakelock gps
 
 service netmgrd /system/bin/netmgrd
