--- a/init.hammerhead.rc
+++ b/init.hammerhead.rc
@@ -287,7 +287,7 @@ service bridgemgrd /system/bin/bridgemgrd
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /system/bin/qmuxd
     class main
-    user root
+    user radio
     group radio audio bluetooth wakelock gps
 
 service netmgrd /system/bin/netmgrd
