Fix for symlinks missing

--- a/ubuntu/device-hacks.conf
+++ b/ubuntu/device-hacks.conf
@@ -24,6 +24,14 @@ script
         echo "/etc/acdbdata link created."
     fi
     
+    if [ -e /etc/firmware ];
+    then
+        echo "/etc/firmware link already present."
+    else
+        ln -s /system/etc/firmware /etc/firmware
+        echo "/etc/firmware link created."
+    fi    
+
     if [ -e /etc/mixer_paths.xml ];
     then
         echo "mixer_paths.xml link already present."
@@ -39,13 +47,21 @@ script
         ln -s /system/etc/media_codecs.xml /etc/media_codecs.xml
         echo "media_codecs.xml link created."
     fi
-
-    if [ -e /etc/firmware ];
+    
+    if [ -e /etc/media_codecs_performance.xml ];
     then
-        echo "/etc/firmware link already present."
+        echo "media_codecs_performance.xml link already present."
     else
-        ln -s /system/etc/firmware/ /etc/firmware
-        echo "/etc/firmware link created."
+        ln -s /system/etc/media_codecs_performance.xml /etc/media_codecs_performance.xml
+        echo "media_codecs_performance.xml link created."
+    fi
+
+    if [ -e /etc/media_profiles.xml ];
+    then
+        echo "media_profiles.xml link already present."
+    else
+        ln -s /system/etc/media_profiles.xml /etc/media_profiles.xml
+        echo "media_profiles.xml link created."
     fi
 
     if [ "$ROOT_WAS_MOUNTED_RO" = "1" ]; then
