Change script path for MTP

--- a/ubuntu/usb/mtp-state.conf
+++ b/ubuntu/usb/mtp-state.conf
@@ -6,14 +6,14 @@ script
  VAL=$(getprop persist.sys.usb.config)
  case ${VAL} in
    mtp)
-     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
-     /bin/bash /system/halium/usr/share/usbinit/setupusb mtp
+     /bin/bash /system/bin/setupusb reset
+     /bin/bash /system/bin/setupusb mtp
      /sbin/initctl emit android-mtp-on
      echo "mtp"
      ;;
    mtp,adb)
-     /bin/bash /system/halium/usr/share/usbinit/setupusb reset
-     /bin/bash /system/halium/usr/share/usbinit/setupusb mtp_adb
+     /bin/bash /system/bin/setupusb reset
+     /bin/bash /system/bin/setupusb mtp_adb
      /sbin/initctl emit android-mtp-on
      echo "mtp,adb"
      ;;
