symlink wifi/bcmdhd.cal

--- a/ubuntu/device-hacks.conf
+++ b/ubuntu/device-hacks.conf
@@ -63,6 +63,14 @@ script
         ln -s /system/etc/media_profiles.xml /etc/media_profiles.xml
         echo "media_profiles.xml link created."
     fi
+    
+    if [ -e /etc/wifi/bcmdhd.cal ];
+    then
+        echo "bcmdhd.cal link already present."
+    else
+        ln -s /system/etc/wifi/bcmdhd.cal /etc/wifi/bcmdhd.cal
+        echo "bcmdhd.cal link created."
+    fi
 
     if [ "$ROOT_WAS_MOUNTED_RO" = "1" ]; then
         mount -o remount,ro /
